# axum-seaorm

./: .env  Cargo.toml
entity/: Cargo.toml
entity/src/: mod.rs  prelude.rs  user.rs
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/handlers/: auth_handlers.rs  mod.rs  user_handlers.rs
src/models/: user_models.rs
src/routes/: auth_routes.rs  mod.rs  user_routes.rs
