[package]
name = "axum-seaorm"
version = "0.1.0"
edition = "2024"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
axum = {version = "0.8.1", features = ["multipart"]}
axum-server = "0.7.1"
tokio = {version = "1.43.0", features = ["full"]}
serde = {version = "1.0.218", features = ["derive"]}
serde_json = "1.0.139"
chrono = "0.4.39"
uuid = {version = "1.14.0", features = ["v4"]}
sea-orm = { version = "1.1.0", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }